--- a/initial/openssl_intermediate.cnf
+++ b/initial/openssl_intermediate.cnf
@@ -57,8 +57,8 @@ commonName                      = Common Name
 emailAddress                    = Email Address
 
 # Optionally, specify some defaults.
-organizationName_default        = VMware 
-organizationalUnitName_default  = MAPBU Support
+organizationName_default        = Merck 
+organizationalUnitName_default  = ADP
 commonName_default              = myIntermediateCA
 
 [ v3_intermediate_ca ]
